feat: Add application name to verify the save/load a file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,8 @@ qt_add_library(QtQuickStream STATIC)
 # Extra QML File properties
 set_source_files_properties(
     include/QtQuickStream/Core/QSFileIO.h
+    include/QtQuickStream/Core/HashStringCPP.h
+
     resources/Core/QSSerializer.qml
     resources/Core/QSUtil.qml
 
@@ -89,10 +91,12 @@ qt_add_qml_module(QtQuickStream
         include/QtQuickStream/Core/QSCoreCpp.h
         include/QtQuickStream/Core/QSObjectCpp.h
         include/QtQuickStream/Core/QSRepositoryCpp.h
+        include/QtQuickStream/Core/HashStringCPP.h
 
         source/Core/QSCoreCpp.cpp
         source/Core/QSObjectCpp.cpp
         source/Core/QSRepositoryCpp.cpp
+        source/Core/HashStringCPP.cpp
 
     RESOURCES
 
